Card | Estilização do Card

--- a/card/index.html
+++ b/card/index.html
@@ -10,16 +10,16 @@
   <body>
     <div class="content">
       <div class="card">
-        <div class="topcard">
-          <h2>Título do Card</h2>
-          <span class="secondText">Texto aleatório ae fodase</span>
+        <div class="topCard">
+          <h2 class="title">Calcifer</h2>
+          <p class="secondText">Sophie holding Calcifer.</p>
         </div>
 
         <div class="mediaCard"></div>
 
         <div class="bottomCard">
           <div class="bottomText">
-            <span class="bottomText">Texto Sobre o que é o Card</span>
+            <p class="bottomText">Calcifer is a character from the movie Howl's Moving Castle, he keeps the castle "alive".</p>
             <div class="actionsCard">
               <button class="actions">Like</button>
               <button class="actions">Share</button>
