--- a/markzuel-dark/index.html
+++ b/markzuel-dark/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
   <title>Login Dark Theme</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
   <div class="main-login">
     <div class="left-login">
       <h1>Faça Login<br>E entre para o nosso time!</h1>
-      <img src="cat-astronaut-animate.svg" class="left-login-image" alt="cat-astronaut">
+      <img src="/imgs/cat-astronaut-animate.svg" class="left-login-image" alt="cat-astronaut">
     </div>
 
     <div class="right-login">
