--- a/forms-responsivo/index.html
+++ b/forms-responsivo/index.html
@@ -25,7 +25,25 @@
       <div class="login-button">
         <button><a href="#">Entrar</a></button>
       </div>
+
+      <div class="mobile-menu-icon">
+        <button><img class="icon" src="assets/img/menuwhite.svg" alt="menu-white"></button>
+      </div>
     </nav>
+
+      <div class="mobile-menu">
+        <ul>
+          <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Projetos</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
+        </ul>
+
+        <div class="login-button">
+          <button><a href="#">Entrar</a></button>
+        </div>
+      </div>
+
+
   </header>
 
 
