criando a função que abre e fecha o menu pra dispositivo mobile

--- a/forms-responsivo/index.html
+++ b/forms-responsivo/index.html
@@ -27,7 +27,7 @@
       </div>
 
       <div class="mobile-menu-icon">
-        <button><img class="icon" src="assets/img/menuwhite.svg" alt="menu-white"></button>
+        <button onclick="menuShow()"><img class="icon" src="assets/img/menuwhite.svg" alt="menu-white"></button>
       </div>
     </nav>
 
